--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -192,8 +192,7 @@
         <!-- END OF BASIC DETAILS -->
 
         <!-- CONTACT DETAILS FORM -->
-        <div class="card mb-4" formGroupName="contactDetails">
-
+        <div class="card mb-4" formGroupName="contactDetails" id="card1" >
           <div class="card-body mx-2 mt-2">
 
             <div class="row">
@@ -202,16 +201,14 @@
                 <h6 class="text-start mb-3">Contact Details</h6>
               </div>
               <div class="col-4 d-flex justify-content-end">
-                <button type="button" id="icon" class="btn btn-card-icon"
-                        data-bs-toggle="collapse" data-bs-target="#contactDetails"
-                        aria-expanded="false" aria-controls="contactDetails">
-                  <i class="fa-solid fa-chevron-down"></i>
+                <button type="button" id="icon" class="btn btn-card-icon" (click)="toggleCollapse('card1')">
+                  <i [class.fa-chevron-down]="openCardId != 'card1'" [class.fa-chevron-up]="openCardId === 'card1'" class="fa-solid"></i>
                 </button>
               </div>
 
             </div>
 
-            <div class="collapse mt-4" id="contactDetails">
+            <div *ngIf="openCardId === 'card1'" id="contactDetails">
 
               <div class="row mb-4">
 
@@ -296,12 +293,11 @@
             </div>
 
           </div>
-
         </div>
         <!-- END OF CONTACT DETAILS -->
 
         <!-- POSTAL ADDRESS DETAILS FORM -->
-        <div class="card mb-4" formGroupName="address">
+        <div class="card mb-4" formGroupName="address" id="card2">
 
           <div class="card-body mx-2 mt-2">
 
@@ -311,16 +307,14 @@
                 <h6 class="text-start mb-3">Postal Address Details</h6>
               </div>
               <div class="col-4 d-flex justify-content-end">
-                <button type="button" id="icon" class="btn btn-card-icon"
-                        data-bs-toggle="collapse" data-bs-target="#postalAddress"
-                        aria-expanded="false" aria-controls="contactDetails">
-                  <i class="fa-solid fa-chevron-down"></i>
+                <button type="button" id="icon" class="btn btn-card-icon" (click)="toggleCollapse('card2')">
+                  <i [class.fa-chevron-down]="openCardId !== 'card2'" [class.fa-chevron-up]="openCardId === 'card2'" class="fa-solid"></i>
                 </button>
               </div>
 
             </div>
 
-            <div class="collapse mt-4" id="postalAddress">
+            <div *ngIf="openCardId === 'card2'" id="postalAddress">
 
               <div class="row mb-4">
 
@@ -383,7 +377,7 @@
         <!-- END OF POSTAL ADDRESS -->
 
         <!-- BANKING DETAILS -->
-        <div class="card mb-4" formGroupName="paymentDetails">
+        <div class="card mb-4" formGroupName="paymentDetails" id="card3">
 
           <div class="card-body mx-2 mt-2">
 
@@ -393,16 +387,14 @@
                 <h6 class="text-start mb-3">Banking Details</h6>
               </div>
               <div class="col-4 d-flex justify-content-end">
-                <button type="button" id="icon" class="btn btn-card-icon"
-                        data-bs-toggle="collapse" data-bs-target="#bankingDetails"
-                        aria-expanded="false" aria-controls="contactDetails">
-                  <i class="fa-solid fa-chevron-down"></i>
+                <button type="button" id="icon" class="btn btn-card-icon" (click)="toggleCollapse('card3')">
+                  <i [class.fa-chevron-down]="openCardId !== 'card3'" [class.fa-chevron-up]="openCardId === 'card3'" class="fa-solid"></i>
                 </button>
               </div>
 
             </div>
 
-            <div class="collapse mt-4" id="bankingDetails">
+            <div *ngIf="openCardId === 'card3'" id="bankingDetails">
 
               <div class="row mb-4">
                 
@@ -505,7 +497,7 @@
         <!-- END OF BANKING DETAILS -->
 
         <!-- WEALTH AML DETAILS -->
-        <div class="card mb-4" formGroupName="wealthDetails">
+        <div class="card mb-4" formGroupName="wealthDetails" id="card4">
 
           <div class="card-body mx-2 mt-2">
 
@@ -515,16 +507,14 @@
                 <h6 class="text-start mb-3">Wealth AML Details</h6>
               </div>
               <div class="col-4 d-flex justify-content-end">
-                <button type="button" id="icon" class="btn btn-card-icon"
-                        data-bs-toggle="collapse" data-bs-target="#amlDetails"
-                        aria-expanded="false" aria-controls="contactDetails">
-                  <i class="fa-solid fa-chevron-down"></i>
+                <button type="button" id="icon" class="btn btn-card-icon" (click)="toggleCollapse('card4')">
+                  <i [class.fa-chevron-down]="openCardId !== 'card4'" [class.fa-chevron-up]="openCardId === 'card4'" class="fa-solid"></i>
                 </button>
               </div>
 
             </div>
 
-            <div class="collapse mt-4" id="amlDetails">
+            <div *ngIf="openCardId === 'card4'" id="amlDetails">
 
               <div class="row mb-4">
 
