--- a/src/app/features/crm/components/campaigns/campaigns.component.html
+++ b/src/app/features/crm/components/campaigns/campaigns.component.html
@@ -144,7 +144,115 @@
 
     </p-tabPanel>
     <p-tabPanel header="Client/Products">
-      <p>Products</p>
+      <h5 class="text-black mt-4">Products</h5>
+      <div class="col-6 mb-2">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search"
+          aria-label="search"
+          aria-describedby="search"
+        />
+      </div>
+      <p-table
+        #campaignsProductsTable
+        [autoLayout]="true"
+        [rowHover]="true"
+        [resizableColumns]="true"
+        [showCurrentPageReport]="true"
+        [rows]="pageSize || 5"
+        [totalRecords]="campaignProductsData?.length"
+        [value]="campaignProductsData"
+        [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+        responsiveLayout="stack"
+        [scrollable]="true"
+        selectionMode="single"
+        dataKey="code"
+        scrollHeight="400px"
+        currentPageReportTemplate="{first} - {last} of {totalRecords}"
+        [globalFilterFields]="['product', 'system']"
+      >
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="product">Product <p-sortIcon field="target"></p-sortIcon></th>
+            <th pSortableColumn="system">System <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Narration <p-sortIcon field="email"></p-sortIcon></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-campaignTarget>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="3">No Products Detail(s) Found.</td>
+          </tr>
+        </ng-template>
+      </p-table>
+
+      <h5 class="text-black mt-4">Clients</h5>
+      <div class="col-6 mb-2">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search"
+          aria-label="search"
+          aria-describedby="search"
+        />
+      </div>
+      <p-table
+        #campaignsClientsTable
+        [autoLayout]="true"
+        [rowHover]="true"
+        [resizableColumns]="true"
+        [showCurrentPageReport]="true"
+        [rows]="pageSize || 5"
+        [totalRecords]="campaignClientsData?.length"
+        [value]="campaignClientsData"
+        [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+        responsiveLayout="stack"
+        [scrollable]="true"
+        selectionMode="single"
+        dataKey="code"
+        scrollHeight="400px"
+        currentPageReportTemplate="{first} - {last} of {totalRecords}"
+        [globalFilterFields]="['name', 'surname']"
+      >
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="product">Full name <p-sortIcon field="target"></p-sortIcon></th>
+            <th pSortableColumn="system">Surname <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Other names <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Town <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Postal code <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Postal address <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Country <p-sortIcon field="email"></p-sortIcon></th>
+            <th pSortableColumn="narration">Telephone no. <p-sortIcon field="email"></p-sortIcon></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-campaignTarget>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="8">No Clients Detail(s) Found.</td>
+          </tr>
+        </ng-template>
+      </p-table>
     </p-tabPanel>
 
   </p-tabView>
