--- a/src/app/features/lms/grp/components/claims/components/claim-initiation/claim-initiation.component.html
+++ b/src/app/features/lms/grp/components/claims/components/claim-initiation/claim-initiation.component.html
@@ -43,7 +43,7 @@
             <label for="causationType" style="color: black;">Select a causation type</label>
             <select class="form-select" [id]="'causationType'" formControlName="causationType">
               <option selected="true" disabled="disabled"></option>
-              <option *ngFor="let causation of " [value]="">{{ causation }}</option>
+              <option *ngFor="let causation of causationTypes " [value]="causation.cause_code">{{ causation.cause_desc | titlecase }}</option>
             </select>
           </div>
         </div>
@@ -53,7 +53,7 @@
             <label for="actualCause" style="color: black;">Select the actual cause</label>
             <select class="form-select" id="actualCause" formControlName="actualCause" (click)="onSelectClick($event)">
               <option selected="true" disabled="disabled">Select an option</option>
-              <option *ngFor="let actualCause of actualCauses" [value]="actualCause">{{ actualCause }}</option>
+              <option *ngFor="let actualCause of actualCauses" [value]="actualCause.causation_cause_code">{{ actualCause.death_disability_description | titlecase }}</option>
               <option class="add-causation-link" [value]="'addCausation'">Add causation
               </option>
               <p-overlayPanel #op>
@@ -88,17 +88,17 @@
                       <label for="gender" style="color: black;">Gender</label>
                     </div>
                       <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" value="male" formControlName="gender"
+                          <input class="form-check-input" type="radio" value="F" formControlName="gender"
                               id="inlineRadio1" name="gender" />
                           <label class="form-check-label" for="inlineRadio1">Male</label>
                       </div>
                       <div class="form-check form-check-inline">
-                          <input class="form-check-input" type="radio" value="female" formControlName="gender"
+                          <input class="form-check-input" type="radio" value="F" formControlName="gender"
                               id="inlineRadio2" name="gender" />
                           <label class="form-check-label" for="inlineRadio2">Female</label>
                       </div>
                       <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" value="both" formControlName="gender"
+                        <input class="form-check-input" type="radio" value="BOTH" formControlName="gender"
                             id="inlineRadio2" name="gender" />
                         <label class="form-check-label" for="inlineRadio2">Both</label>
                     </div>
@@ -118,7 +118,7 @@
                 </div>
 
                 <div class="button-container">
-                  <button class="book-claim" (click)="submitClaimInitFormData()">Add actual type</button>
+                  <button class="book-claim" (click)="addActualType()">Add actual type</button>
                 </div>
                 
               </p-overlayPanel>
