--- a/src/app/features/crm/components/scheduler/scheduler.component.css
+++ b/src/app/features/crm/components/scheduler/scheduler.component.css
@@ -35,3 +35,23 @@ label {
 fieldset legend {
   font-size: 16px;
 }
+
+::ng-deep .p-dropdown .p-dropdown-label {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+::ng-deep .p-dropdown .p-dropdown-filter {
+  height: 35px;
+}
+
+::ng-deep .p-dropdown-invalid .p-dropdown {
+  border: solid 1px red !important;
+}
+
+.p-tooltip {
+  background-color: red;
+  z-index: 9999 !important;
+  position: absolute;
+}
