VQ-2343: Ability to delete Premium

--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -1858,7 +1858,7 @@
                                                         {{'gis.policy.are_you_sure_you_want_to_delete' | translate}}</p>
                                                     <div class="d-flex justify-content-center mb-3">
                                                         <button type="button" class="btn btn-primary px-5" id="delete"
-                                                            data-bs-dismiss="modal">{{'gis.policy.yes_delete' |
+                                                            data-bs-dismiss="modal" (click)="deletePremiumItem()">{{'gis.policy.yes_delete' |
                                                             translate}} </button>
                                                     </div>
                                                     <div class="d-flex justify-content-center mb-2">
