--- a/src/app/features/gis/components/policy/components/policy-summary-details/policy-summary-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-details/policy-summary-details.component.html
@@ -24,7 +24,7 @@
                     <p class="label">Policy no.</p>
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.policyNo}}</p>
+                    <p class="detail">{{policyNumber}}</p>
                     
                 </div>
             </div>
@@ -35,7 +35,7 @@
                     <p class="label">Endorsement no.</p>  
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.endorsementNo}}</p>
+                    <p class="detail">{{endorsementNo}}</p>
                     
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.policyType}}</p>
+                    <p class="detail">{{policyType}}</p>
                     
                 </div>
             </div>
@@ -83,7 +83,7 @@
                   
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.totalSumInsured}}</p>
+                    <p class="detail">{{totalSumInsured}}</p>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
                     <p class="label">Expected premium</p>  
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.basicPremium}}</p>
+                    <p class="detail">{{basicPremium}}</p>
                     
                 </div>
             </div>
@@ -118,7 +118,7 @@
                    
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.policyStatus}}</p>
+                    <p class="detail">{{policyStatus}}</p>
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                     <p class="label">Cover From</p>
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.wefDt}}</p>
+                    <p class="detail">{{wef}}</p>
                     
                 </div>
             </div>
@@ -141,7 +141,7 @@
                     <p class="label">Cover To</p>  
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.wetDt}}</p>
+                    <p class="detail">{{wet}}</p>
                     
                 </div>
             </div>
@@ -153,7 +153,7 @@
                    
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.authorizedStatus}}</p>
+                    <p class="detail">{{authorizedStatus}}</p>
                 </div>
             </div>
         </div>
@@ -176,7 +176,7 @@
                     <p class="label">U/W only</p>  
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.underWritingOnly}}</p>
+                    <p class="detail">{{underWritingOnly}}</p>
                     
                 </div>
             </div>
@@ -188,7 +188,7 @@
                    
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.currency}}</p>
+                    <p class="detail">{{currency}}</p>
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
                    
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.transactionType}}</p>
+                    <p class="detail">{{transactionType}}</p>
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
                     <p class="label">Renewal Date</p>
                 </div>
                 <div class="col-6">
-                    <p class="detail">{{policySummary.renewalDate}}</p>
+                    <p class="detail">{{renewalDate}}</p>
                     
                 </div>
             </div>
